# Sketchguard

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  README_GUI.md  check_missing_experiments.py  decentralized_fl_sim.py  decentralized_fl_sim_with_gui.py  extracted_accuracies.csv  extracted_time.csv  extracted_time_model_scaling.csv  fl_monitor_gui.py  launch_fl_monitor.py  leaf_datasets.py  pyproject.toml  requirements.txt  run_experiments.py  run_large_scalability_experiments.py  run_model_scaling_experiments.py  run_scalability_experiments.py  test_gui_standalone.py
leaf/data/celeba/meta/: sampling_seed.txt  split_seed.txt
leaf/data/femnist/: stats.sh
leaf/data/femnist/meta/: sampling_seed.txt  split_seed.txt
leaf/data/femnist/preprocess/: data_to_json.py
leaf/data/sent140/meta/: sampling_seed.txt
murmura/: __init__.py  cli.py
murmura/aggregation/: __init__.py  balance.py  base.py  fedavg.py  krum.py  sketchguard.py  ubar.py
murmura/attacks/: __init__.py  base.py  directed.py  gaussian.py
murmura/config/: __init__.py  loader.py  schema.py
murmura/core/: __init__.py  network.py  node.py  types.py
murmura/data/: __init__.py  adapters.py  base.py
murmura/examples/: simple_programmatic.py
murmura/examples/configs/: basic_fedavg.yaml  ubar_attack.yaml
murmura/examples/leaf/: __init__.py  adapter.py  datasets.py  model_factories.py  models.py
murmura/topology/: __init__.py  base.py  generators.py
murmura/utils/: __init__.py  device.py  metrics.py  seed.py
raw_data/: extracted_accuracies.csv  extracted_accuracies_k_ablation.csv  extracted_time_model_scaling.csv  extracted_time_network_scaling.csv
scripts/: README.md
scripts/data_extraction/: README.md  extract_accuracies.py
scripts/experiments/: run_experiments.py  run_model_scaling_experiments.py
scripts/visualization/: README.md  visualize_computational_complexity.py  visualize_paper_style.py  visualize_scalability.py  visualize_topology_style.py
